[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "control-toolbox"
version = "0.1.0"
readme = "README.md"
description = "LQR-based control system design and analysis"
authors = [{ name = "Prateek Ganguli", email = "prateek.ganguli@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = ["control>=0.9", "numpy>=1.24", "matplotlib>=3.7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

